--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-MONGO_URI =mongodb+srv://weshu:passLost@cluster01.5fh8jzr.mongodb.net/?retryWrites=true&w=majority&appName=cluster01
-
+MONGO_URI = //
 PORT=3000
 
 jwt = 1221
